--- a/starview_frontend/src/pages/Sky/styles.css
+++ b/starview_frontend/src/pages/Sky/styles.css
@@ -123,7 +123,7 @@
 /* ============================================ */
 
 .sky-page {
-  min-height: calc(100vh - var(--navbar-total-height));
+  min-height: inherit; /* Inherit from .main-content */
   display: flex;
   flex-direction: column;
   align-items: center;
